--- a/app/src/main/res/layout/items_address.xml
+++ b/app/src/main/res/layout/items_address.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#B6B6B6"
     android:layout_margin="16dp"
     android:layout_width="match_parent"
@@ -62,4 +63,17 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
+
+    <ImageButton
+        android:id="@+id/ivDeleteProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="#B6B6B6"
+        android:src="@drawable/ic_baseline_delete_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tvNameAddress"
+        app:layout_constraintStart_toStartOf="@+id/tvNameAddress"
+        app:layout_constraintTop_toBottomOf="@+id/tvNameAddress" />
 </androidx.constraintlayout.widget.ConstraintLayout>
