--- a/app/src/main/res/layout/fragment_description_product.xml
+++ b/app/src/main/res/layout/fragment_description_product.xml
@@ -159,28 +159,15 @@
             android:text="@string/stock_quantity"
             android:textStyle="bold" />
 
-        <ImageButton
-            android:id="@+id/ibMinus"
-            android:backgroundTint="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_remove_24" />
-
         <TextView
             android:id="@+id/tvQuantity"
             android:layout_gravity="center"
+            android:layout_marginStart="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/item_border"
             android:padding="8dp"
             android:text="20" />
-
-        <ImageButton
-            android:id="@+id/ibPlus"
-            android:backgroundTint="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_add_24" />
     </LinearLayout>
 
     <Button
