--- a/app/src/main/res/layout/items_in_cart.xml
+++ b/app/src/main/res/layout/items_in_cart.xml
@@ -52,13 +52,13 @@
         android:id="@+id/linearLayout10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginEnd="8dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/ivProduct"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout9"
         app:layout_constraintEnd_toStartOf="@+id/ivDeleteProduct"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
-        app:layout_constraintTop_toTopOf="@+id/ivProduct">
+        app:layout_constraintTop_toTopOf="@+id/linearLayout9">
 
         <ImageButton
             android:id="@+id/ibMinus"
@@ -74,7 +74,8 @@
             android:layout_gravity="center"
             android:background="@drawable/item_border"
             android:padding="8dp"
-            android:text="20" />
+            android:text="20"
+            android:textSize="12sp" />
 
         <ImageButton
             android:id="@+id/ibPlus"
