--- a/app/src/main/res/layout/items_in_cart.xml
+++ b/app/src/main/res/layout/items_in_cart.xml
@@ -21,7 +21,7 @@
         android:id="@+id/linearLayout9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/ivProduct"
@@ -35,6 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:text="My products"
+            android:maxWidth="80dp"
+            android:maxLines="3"
             android:textColor="#373535"
             android:textStyle="bold" />
 
