--- a/app/src/main/res/layout/items_orders.xml
+++ b/app/src/main/res/layout/items_orders.xml
@@ -9,8 +9,9 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_foreground" />
@@ -32,11 +33,6 @@
             android:layout_height="wrap_content"
             android:text="My products" />
 
-        <TextView
-            android:id="@+id/tvPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1234" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
