--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -147,7 +147,9 @@
             app:argType="com.example.myshop.domain.models.Products" />
         <action
             android:id="@+id/action_descriptionProductFragment_to_myCartFragment"
-            app:destination="@id/myCartFragment" />
+            app:destination="@id/myCartFragment"
+            app:popUpTo="@id/descriptionProductFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/myCartFragment"
@@ -156,7 +158,9 @@
         tools:layout="@layout/fragment_my_cart" >
         <action
             android:id="@+id/action_myCartFragment_to_descriptionProductFragment"
-            app:destination="@id/descriptionProductFragment" />
+            app:destination="@id/descriptionProductFragment"
+            app:popUpTo="@id/myCartFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_myCartFragment_to_productsFragment"
             app:destination="@id/productsFragment" />
